// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notice demo -- base 1`] = `
.emotion-12 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  color: #0a1633;
  border: 1px solid #d2d6ea;
  background: #fafafc;
}

.emotion-12 .emotion-0 {
  color: #3860f4;
}

.emotion-12 .e1aspfr53 {
  color: #526075;
}

.emotion-3 {
  display: table-cell;
  font-size: 15px;
  width: 15px;
  color: inherit;
  padding-right: 8px;
  padding-top: 2px;
}

.emotion-1 {
  vertical-align: baseline;
}

.emotion-5 {
  display: table-cell;
  vertical-align: middle;
}

.emotion-10 {
  display: table-cell;
  padding-left: 8px;
  white-space: nowrap;
  text-align: right;
  width: 12px;
}

.emotion-8 {
  vertical-align: baseline;
  cursor: pointer;
}

.emotion-26 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  color: #0a1633;
  border: 1px solid #9effa5;
  background: #e6ffed;
}

.emotion-26 .emotion-0 {
  color: #15ad31;
}

.emotion-26 .e1aspfr53 {
  color: #526075;
}

.emotion-40 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  color: #0a1633;
  border: 1px solid #ffe38d;
  background: #fffce6;
}

.emotion-40 .emotion-0 {
  color: #ffc42e;
}

.emotion-40 .e1aspfr53 {
  color: #526075;
}

.emotion-54 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  color: #0a1633;
  border: 1px solid #fed4d4;
  background: #fff0f0;
}

.emotion-54 .emotion-0 {
  color: #f44336;
}

.emotion-54 .e1aspfr53 {
  color: #526075;
}

.emotion-68 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  color: #cccccc;
  border: 1px solid #d9d9d9;
}

.emotion-68 .emotion-0 {
  color: #cccccc;
}

.emotion-68 .e1aspfr53 {
  color: #526075;
}

.emotion-12 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  color: #0a1633;
  border: 1px solid #d2d6ea;
  background: #fafafc;
}

.emotion-12 .emotion-0 {
  color: #3860f4;
}

.emotion-12 .e1aspfr53 {
  color: #526075;
}

.emotion-3 {
  display: table-cell;
  font-size: 15px;
  width: 15px;
  color: inherit;
  padding-right: 8px;
  padding-top: 2px;
}

.emotion-1 {
  vertical-align: baseline;
}

.emotion-5 {
  display: table-cell;
  vertical-align: middle;
}

.emotion-10 {
  display: table-cell;
  padding-left: 8px;
  white-space: nowrap;
  text-align: right;
  width: 12px;
}

.emotion-8 {
  vertical-align: baseline;
  cursor: pointer;
}

.emotion-26 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  color: #0a1633;
  border: 1px solid #9effa5;
  background: #e6ffed;
}

.emotion-26 .emotion-0 {
  color: #15ad31;
}

.emotion-26 .e1aspfr53 {
  color: #526075;
}

.emotion-40 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  color: #0a1633;
  border: 1px solid #ffe38d;
  background: #fffce6;
}

.emotion-40 .emotion-0 {
  color: #ffc42e;
}

.emotion-40 .e1aspfr53 {
  color: #526075;
}

.emotion-54 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  color: #0a1633;
  border: 1px solid #fed4d4;
  background: #fff0f0;
}

.emotion-54 .emotion-0 {
  color: #f44336;
}

.emotion-54 .e1aspfr53 {
  color: #526075;
}

.emotion-68 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  color: #cccccc;
  border: 1px solid #d9d9d9;
}

.emotion-68 .emotion-0 {
  color: #cccccc;
}

.emotion-68 .e1aspfr53 {
  color: #526075;
}

<div>
  <div
    class=" emotion-12 emotion-13"
    style="margin-bottom:8px"
  >
    <span
      class="emotion-3 emotion-4"
    >
      <i
        class="uc-fe-icon icon__circle-mark2 emotion-0 emotion-1 emotion-2"
      />
    </span>
    <div
      class="emotion-5 emotion-6"
    >
      Notice content
    </div>
    <div
      class="emotion-10 emotion-11"
    >
      <i
        class="uc-fe-icon icon__cross emotion-7 emotion-8 emotion-2"
      />
    </div>
  </div>
  <div
    class=" emotion-26 emotion-13"
    style="margin-bottom:8px"
  >
    <span
      class="emotion-3 emotion-4"
    >
      <i
        class="uc-fe-icon icon__circle-mark2 emotion-0 emotion-1 emotion-2"
      />
    </span>
    <div
      class="emotion-5 emotion-6"
    >
      Notice content
    </div>
    <div
      class="emotion-10 emotion-11"
    >
      <i
        class="uc-fe-icon icon__cross emotion-7 emotion-8 emotion-2"
      />
    </div>
  </div>
  <div
    class=" emotion-40 emotion-13"
    style="margin-bottom:8px"
  >
    <span
      class="emotion-3 emotion-4"
    >
      <i
        class="uc-fe-icon icon__circle-mark2 emotion-0 emotion-1 emotion-2"
      />
    </span>
    <div
      class="emotion-5 emotion-6"
    >
      Notice content
    </div>
    <div
      class="emotion-10 emotion-11"
    >
      <i
        class="uc-fe-icon icon__cross emotion-7 emotion-8 emotion-2"
      />
    </div>
  </div>
  <div
    class=" emotion-54 emotion-13"
    style="margin-bottom:8px"
  >
    <span
      class="emotion-3 emotion-4"
    >
      <i
        class="uc-fe-icon icon__circle-mark2 emotion-0 emotion-1 emotion-2"
      />
    </span>
    <div
      class="emotion-5 emotion-6"
    >
      Notice content
    </div>
    <div
      class="emotion-10 emotion-11"
    >
      <i
        class="uc-fe-icon icon__cross emotion-7 emotion-8 emotion-2"
      />
    </div>
  </div>
  <div
    class=" emotion-68 emotion-13"
    style="margin-bottom:8px"
  >
    <span
      class="emotion-3 emotion-4"
    >
      <i
        class="uc-fe-icon icon__circle-mark2 emotion-0 emotion-1 emotion-2"
      />
    </span>
    <div
      class="emotion-5 emotion-6"
    >
      Notice content
    </div>
    <div
      class="emotion-10 emotion-11"
    >
      <i
        class="uc-fe-icon icon__cross emotion-7 emotion-8 emotion-2"
      />
    </div>
  </div>
</div>
`;

exports[`Notice demo -- custom 1`] = `
@keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.emotion-7 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  color: #0a1633;
  border: 1px solid #d2d6ea;
  background: #fafafc;
}

.emotion-7 .emotion-0 {
  color: #3860f4;
}

.emotion-7 .emotion-64 {
  color: #526075;
}

.emotion-3 {
  display: table-cell;
  font-size: 15px;
  width: 15px;
  color: inherit;
  padding-right: 8px;
  padding-top: 2px;
}

.emotion-1 {
  vertical-align: baseline;
}

.emotion-5 {
  display: table-cell;
  vertical-align: middle;
}

.emotion-14 {
  display: table-cell;
  padding-left: 8px;
  white-space: nowrap;
  text-align: right;
  width: 12px;
}

.emotion-12 {
  vertical-align: baseline;
  cursor: pointer;
}

.emotion-41 {
  vertical-align: baseline;
}

.emotion-41.emotion-41.emotion-41 {
  -webkit-animation: animation-0 1.2s infinite linear;
  animation: animation-0 1.2s infinite linear;
  line-height: normal;
}

.emotion-63 {
  display: table-cell;
  padding-left: 8px;
  white-space: nowrap;
  text-align: right;
}

.emotion-61 {
  vertical-align: baseline;
}

@keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.emotion-7 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  color: #0a1633;
  border: 1px solid #d2d6ea;
  background: #fafafc;
}

.emotion-7 .emotion-0 {
  color: #3860f4;
}

.emotion-7 .emotion-64 {
  color: #526075;
}

.emotion-3 {
  display: table-cell;
  font-size: 15px;
  width: 15px;
  color: inherit;
  padding-right: 8px;
  padding-top: 2px;
}

.emotion-1 {
  vertical-align: baseline;
}

.emotion-5 {
  display: table-cell;
  vertical-align: middle;
}

.emotion-14 {
  display: table-cell;
  padding-left: 8px;
  white-space: nowrap;
  text-align: right;
  width: 12px;
}

.emotion-12 {
  vertical-align: baseline;
  cursor: pointer;
}

.emotion-41 {
  vertical-align: baseline;
}

.emotion-41.emotion-41.emotion-41 {
  -webkit-animation: animation-0 1.2s infinite linear;
  animation: animation-0 1.2s infinite linear;
  line-height: normal;
}

.emotion-63 {
  display: table-cell;
  padding-left: 8px;
  white-space: nowrap;
  text-align: right;
}

.emotion-61 {
  vertical-align: baseline;
}

<div>
  <div
    class=" emotion-7 emotion-8"
    style="margin-bottom:8px"
  >
    <span
      class="emotion-3 emotion-4"
    >
      <i
        class="uc-fe-icon icon__circle-mark2 emotion-0 emotion-1 emotion-2"
      />
    </span>
    <div
      class="emotion-5 emotion-6"
    >
      Notice content
    </div>
  </div>
  <div
    class=" emotion-7 emotion-8"
    style="margin-bottom:8px"
  >
    <div
      class="emotion-5 emotion-6"
    >
      Notice content
    </div>
    <div
      class="emotion-14 emotion-15"
    >
      <i
        class="uc-fe-icon icon__cross emotion-11 emotion-12 emotion-2"
      />
    </div>
  </div>
  <div
    class=" emotion-7 emotion-8"
    style="margin-bottom:8px"
  >
    <div
      class="emotion-5 emotion-6"
    >
      Notice content
    </div>
    <div
      class="emotion-14 emotion-15"
    >
      <i
        class="uc-fe-icon icon__cross emotion-11 emotion-12 emotion-2"
      />
    </div>
  </div>
  <div
    class=" emotion-7 emotion-8"
    style="margin-bottom:8px"
  >
    <span
      class="emotion-3 emotion-4"
    >
      <i
        class="uc-fe-icon icon__loading emotion-0 emotion-1 emotion-2"
      />
    </span>
    <div
      class="emotion-5 emotion-6"
    >
      Notice content
    </div>
    <div
      class="emotion-14 emotion-15"
    >
      <i
        class="uc-fe-icon icon__cross emotion-11 emotion-12 emotion-2"
      />
    </div>
  </div>
  <div
    class=" emotion-7 emotion-8"
    style="margin-bottom:8px"
  >
    <span
      class="emotion-3 emotion-4"
    >
      <i
        class="uc-fe-icon icon__loading uc-fe-icon-spin emotion-41 emotion-2"
      />
    </span>
    <div
      class="emotion-5 emotion-6"
    >
      Notice content
    </div>
    <div
      class="emotion-14 emotion-15"
    >
      <i
        class="uc-fe-icon icon__cross emotion-11 emotion-12 emotion-2"
      />
    </div>
  </div>
  <div
    class=" emotion-7 emotion-8"
    style="margin-bottom:8px"
  >
    <span
      class="emotion-3 emotion-4"
    >
      <i
        class="uc-fe-icon icon__circle-mark2 emotion-0 emotion-1 emotion-2"
      />
    </span>
    <div
      class="emotion-5 emotion-6"
    >
      Notice content
    </div>
    <div
      class="emotion-63 emotion-64"
    >
      <i
        class="uc-fe-icon icon__loading emotion-61 emotion-2"
      />
    </div>
    <div
      class="emotion-14 emotion-15"
    >
      <i
        class="uc-fe-icon icon__cross emotion-11 emotion-12 emotion-2"
      />
    </div>
  </div>
  <div
    class=" emotion-7 emotion-8"
    style="margin-bottom:8px"
  >
    <span
      class="emotion-3 emotion-4"
    >
      <i
        class="uc-fe-icon icon__circle-mark2 emotion-0 emotion-1 emotion-2"
      />
    </span>
    <div
      class="emotion-5 emotion-6"
    >
      Notice content Notice content Notice content Notice content Notice content Notice content Notice content Notice content Notice content Notice content Notice content Notice content
    </div>
    <div
      class="emotion-63 emotion-64"
    >
      <i
        class="uc-fe-icon icon__loading emotion-61 emotion-2"
      />
    </div>
    <div
      class="emotion-14 emotion-15"
    >
      <i
        class="uc-fe-icon icon__cross emotion-11 emotion-12 emotion-2"
      />
    </div>
  </div>
</div>
`;

exports[`Notice demo -- notice 1`] = `
.emotion-112 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  color: #0a1633;
  border: 1px solid #d2d6ea;
  background: #fafafc;
}

.emotion-112 .emotion-105 {
  color: #3860f4;
}

.emotion-112 .e1aspfr53 {
  color: #526075;
}

.emotion-108 {
  display: table-cell;
  font-size: 15px;
  width: 15px;
  color: inherit;
  padding-right: 8px;
  padding-top: 2px;
}

.emotion-106 {
  vertical-align: baseline;
}

.emotion-110 {
  display: table-cell;
  vertical-align: middle;
}

.emotion-103 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-103 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-39 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-39:before,
.emotion-39:after {
  content: ' ';
  display: table;
}

.emotion-39:after {
  clear: both;
}

.emotion-39 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.emotion-36 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 83.33333333%;
}

.emotion-36 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 83.33333333%;
}

.emotion-33 {
  position: relative;
  margin-bottom: -8px;
}

.emotion-33 .uc-fe-radio-styletype-default,
.emotion-33 .uc-fe-radio-styletype-tag {
  margin-right: 8px;
  margin-bottom: 8px;
}

.emotion-33 .uc-fe-radio-styletype-default:last-child,
.emotion-33 .uc-fe-radio-styletype-tag:last-child {
  margin-right: 0;
}

.emotion-33 .uc-fe-radio-styletype-card {
  margin-right: 12px;
  margin-bottom: 8px;
}

.emotion-33 .uc-fe-radio-styletype-card:last-child {
  margin-right: 0;
}

.emotion-33 .uc-fe-radio-styletype-text+.uc-fe-radio-styletype-text {
  margin-left: -1px;
}

.emotion-33 .uc-fe-radio-styletype-button {
  margin-right: -1px;
  margin-bottom: 8px;
}

.emotion-33 .uc-fe-radio-styletype-button:first-of-type {
  border-radius: 2px 0 0 2px;
}

.emotion-33 .uc-fe-radio-styletype-button:last-of-type {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.emotion-33 .uc-fe-radio-styletype-list:last-of-type {
  margin-bottom: 8px;
}

.emotion-7 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  line-height: 28px;
  font-size: 0;
  color: #0a1633;
}

.emotion-7 > * {
  font-size: 12px;
}

.emotion-7 .uc-fe-radio-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.emotion-7.uc-fe-radio-disabled {
  cursor: default;
  color: #cccccc;
}

.emotion-5.uc-fe-radio-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 8px;
  vertical-align: middle;
}

.emotion-5 .uc-fe-radio-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.emotion-5.uc-fe-radio-icon-wrap {
  border-color: #3860f4;
}

.emotion-5 .uc-fe-radio-icon {
  visibility: visible;
  opacity: 1;
  fill: #3860f4;
}

.emotion-3 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  fill: currentcolor;
  display: inline-block;
  vertical-align: middle;
  width: 14px;
  height: 14px;
}

.emotion-13 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  line-height: 28px;
  font-size: 0;
  color: #0a1633;
}

.emotion-13 > * {
  font-size: 12px;
}

.emotion-13 .uc-fe-radio-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.emotion-13.uc-fe-radio-disabled {
  cursor: default;
  color: #cccccc;
}

.emotion-13:hover .uc-fe-radio-icon-wrap {
  border-color: #3860f4;
}

.emotion-11.uc-fe-radio-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 8px;
  vertical-align: middle;
}

.emotion-11 .uc-fe-radio-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.emotion-44 {
  position: relative;
  cursor: pointer;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  width: 73px;
}

.emotion-44 .uc-fe-switch-inner {
  border-radius: 2px;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: color 0.3s;
  transition: color 0.3s;
}

.emotion-44 .uc-fe-switch-dot {
  position: absolute;
  display: block;
  right: 6px;
  top: 50%;
  margin-top: -2px;
  width: 4px;
  height: 4px;
  border-radius: 50%;
  -webkit-transition: background 0.3s;
  transition: background 0.3s;
}

.emotion-44 .uc-fe-switch-button {
  position: absolute;
  display: block;
  box-sizing: border-box;
  left: 0;
  top: 0;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-44 .uc-fe-switch-button > span {
  display: block;
  width: 100%;
  height: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.emotion-44 .uc-fe-switch-tip-on,
.emotion-44 .uc-fe-switch-tip-off {
  width: 100%;
  text-align: center;
  box-sizing: border-box;
  display: block;
}

.emotion-44 .uc-fe-switch-inner {
  background: #f6f6fb;
  border-color: #d2d6ea;
  border-width: 1px;
  border-style: solid;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  color: #526075;
}

.emotion-44 .uc-fe-switch-button {
  width: 28px;
  height: 28px;
  padding: 2px;
}

.emotion-44 .uc-fe-switch-button > span {
  background: #ffffff;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  border: 1px solid #d2d6ea;
}

.emotion-44 .uc-fe-switch-dot {
  background: #f44336;
}

.emotion-44:hover .uc-fe-switch-inner {
  border-color: #c3cad9;
}

.emotion-44 .uc-fe-switch-tip-on {
  padding-right: 28px;
}

.emotion-44 .uc-fe-switch-tip-off {
  padding-left: 28px;
}

.emotion-44 .uc-fe-switch-tip-on {
  display: none;
}

.emotion-112 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  color: #0a1633;
  border: 1px solid #d2d6ea;
  background: #fafafc;
}

.emotion-112 .emotion-105 {
  color: #3860f4;
}

.emotion-112 .e1aspfr53 {
  color: #526075;
}

.emotion-108 {
  display: table-cell;
  font-size: 15px;
  width: 15px;
  color: inherit;
  padding-right: 8px;
  padding-top: 2px;
}

.emotion-106 {
  vertical-align: baseline;
}

.emotion-110 {
  display: table-cell;
  vertical-align: middle;
}

.emotion-103 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-103 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-39 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-39:before,
.emotion-39:after {
  content: ' ';
  display: table;
}

.emotion-39:after {
  clear: both;
}

.emotion-39 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.emotion-36 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 83.33333333%;
}

.emotion-36 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 83.33333333%;
}

.emotion-33 {
  position: relative;
  margin-bottom: -8px;
}

.emotion-33 .uc-fe-radio-styletype-default,
.emotion-33 .uc-fe-radio-styletype-tag {
  margin-right: 8px;
  margin-bottom: 8px;
}

.emotion-33 .uc-fe-radio-styletype-default:last-child,
.emotion-33 .uc-fe-radio-styletype-tag:last-child {
  margin-right: 0;
}

.emotion-33 .uc-fe-radio-styletype-card {
  margin-right: 12px;
  margin-bottom: 8px;
}

.emotion-33 .uc-fe-radio-styletype-card:last-child {
  margin-right: 0;
}

.emotion-33 .uc-fe-radio-styletype-text+.uc-fe-radio-styletype-text {
  margin-left: -1px;
}

.emotion-33 .uc-fe-radio-styletype-button {
  margin-right: -1px;
  margin-bottom: 8px;
}

.emotion-33 .uc-fe-radio-styletype-button:first-of-type {
  border-radius: 2px 0 0 2px;
}

.emotion-33 .uc-fe-radio-styletype-button:last-of-type {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.emotion-33 .uc-fe-radio-styletype-list:last-of-type {
  margin-bottom: 8px;
}

.emotion-7 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  line-height: 28px;
  font-size: 0;
  color: #0a1633;
}

.emotion-7 > * {
  font-size: 12px;
}

.emotion-7 .uc-fe-radio-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.emotion-7.uc-fe-radio-disabled {
  cursor: default;
  color: #cccccc;
}

.emotion-5.uc-fe-radio-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 8px;
  vertical-align: middle;
}

.emotion-5 .uc-fe-radio-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.emotion-5.uc-fe-radio-icon-wrap {
  border-color: #3860f4;
}

.emotion-5 .uc-fe-radio-icon {
  visibility: visible;
  opacity: 1;
  fill: #3860f4;
}

.emotion-3 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  fill: currentcolor;
  display: inline-block;
  vertical-align: middle;
  width: 14px;
  height: 14px;
}

.emotion-13 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  line-height: 28px;
  font-size: 0;
  color: #0a1633;
}

.emotion-13 > * {
  font-size: 12px;
}

.emotion-13 .uc-fe-radio-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.emotion-13.uc-fe-radio-disabled {
  cursor: default;
  color: #cccccc;
}

.emotion-13:hover .uc-fe-radio-icon-wrap {
  border-color: #3860f4;
}

.emotion-11.uc-fe-radio-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 8px;
  vertical-align: middle;
}

.emotion-11 .uc-fe-radio-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.emotion-44 {
  position: relative;
  cursor: pointer;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  width: 73px;
}

.emotion-44 .uc-fe-switch-inner {
  border-radius: 2px;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: color 0.3s;
  transition: color 0.3s;
}

.emotion-44 .uc-fe-switch-dot {
  position: absolute;
  display: block;
  right: 6px;
  top: 50%;
  margin-top: -2px;
  width: 4px;
  height: 4px;
  border-radius: 50%;
  -webkit-transition: background 0.3s;
  transition: background 0.3s;
}

.emotion-44 .uc-fe-switch-button {
  position: absolute;
  display: block;
  box-sizing: border-box;
  left: 0;
  top: 0;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-44 .uc-fe-switch-button > span {
  display: block;
  width: 100%;
  height: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.emotion-44 .uc-fe-switch-tip-on,
.emotion-44 .uc-fe-switch-tip-off {
  width: 100%;
  text-align: center;
  box-sizing: border-box;
  display: block;
}

.emotion-44 .uc-fe-switch-inner {
  background: #f6f6fb;
  border-color: #d2d6ea;
  border-width: 1px;
  border-style: solid;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  color: #526075;
}

.emotion-44 .uc-fe-switch-button {
  width: 28px;
  height: 28px;
  padding: 2px;
}

.emotion-44 .uc-fe-switch-button > span {
  background: #ffffff;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  border: 1px solid #d2d6ea;
}

.emotion-44 .uc-fe-switch-dot {
  background: #f44336;
}

.emotion-44:hover .uc-fe-switch-inner {
  border-color: #c3cad9;
}

.emotion-44 .uc-fe-switch-tip-on {
  padding-right: 28px;
}

.emotion-44 .uc-fe-switch-tip-off {
  padding-left: 28px;
}

.emotion-44 .uc-fe-switch-tip-on {
  display: none;
}

<div>
  <form
    class="uc-fe-form demo-form emotion-103 emotion-104"
  >
    <div
      class="uc-fe-row uc-fe-form-item emotion-38 emotion-39 emotion-40"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="2"
      >
        styleType
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-35 emotion-36 emotion-2"
        span="10"
      >
        <div
          class="emotion-33 emotion-34"
        >
          <span
            checked=""
            class="uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-7 emotion-8"
          >
            <span
              checked=""
              class="uc-fe-radio-icon-wrap emotion-5 emotion-6"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              default
            </span>
          </span>
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-13 emotion-8"
          >
            <span
              class="uc-fe-radio-icon-wrap emotion-11 emotion-6"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              success
            </span>
          </span>
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-13 emotion-8"
          >
            <span
              class="uc-fe-radio-icon-wrap emotion-11 emotion-6"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              warning
            </span>
          </span>
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-13 emotion-8"
          >
            <span
              class="uc-fe-radio-icon-wrap emotion-11 emotion-6"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              error
            </span>
          </span>
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-13 emotion-8"
          >
            <span
              class="uc-fe-radio-icon-wrap emotion-11 emotion-6"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              disabled
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-row uc-fe-form-item emotion-38 emotion-39 emotion-40"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="2"
      >
        closable
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-35 emotion-36 emotion-2"
        span="10"
      >
        <div
          class="emotion-44 emotion-45"
        >
          <span
            class="uc-fe-switch-inner"
          >
            <span
              class="uc-fe-switch-tip-on"
            >
              ON
            </span>
            <span
              class="uc-fe-switch-tip-off"
            >
              OFF
            </span>
          </span>
          <span
            class="uc-fe-switch-button"
          >
            <span>
              <span
                class="uc-fe-switch-dot"
              />
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-row uc-fe-form-item emotion-38 emotion-39 emotion-40"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="2"
      >
        icon
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-35 emotion-36 emotion-2"
        span="10"
      >
        <div
          class="emotion-33 emotion-34"
        >
          <span
            checked=""
            class="uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-7 emotion-8"
          >
            <span
              checked=""
              class="uc-fe-radio-icon-wrap emotion-5 emotion-6"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              undefined
            </span>
          </span>
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-13 emotion-8"
          >
            <span
              class="uc-fe-radio-icon-wrap emotion-11 emotion-6"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              loading
            </span>
          </span>
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-13 emotion-8"
          >
            <span
              class="uc-fe-radio-icon-wrap emotion-11 emotion-6"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              circle
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-row uc-fe-form-item emotion-38 emotion-39 emotion-40"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="2"
      >
        longContent
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-35 emotion-36 emotion-2"
        span="10"
      >
        <div
          class="emotion-44 emotion-45"
        >
          <span
            class="uc-fe-switch-inner"
          >
            <span
              class="uc-fe-switch-tip-on"
            >
              ON
            </span>
            <span
              class="uc-fe-switch-tip-off"
            >
              OFF
            </span>
          </span>
          <span
            class="uc-fe-switch-button"
          >
            <span>
              <span
                class="uc-fe-switch-dot"
              />
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-row uc-fe-form-item emotion-38 emotion-39 emotion-40"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="2"
      >
        withAction
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-35 emotion-36 emotion-2"
        span="10"
      >
        <div
          class="emotion-44 emotion-45"
        >
          <span
            class="uc-fe-switch-inner"
          >
            <span
              class="uc-fe-switch-tip-on"
            >
              ON
            </span>
            <span
              class="uc-fe-switch-tip-off"
            >
              OFF
            </span>
          </span>
          <span
            class="uc-fe-switch-button"
          >
            <span>
              <span
                class="uc-fe-switch-dot"
              />
            </span>
          </span>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <div
      class=" emotion-112 emotion-113"
    >
      <span
        class="emotion-108 emotion-109"
      >
        <i
          class="uc-fe-icon icon__circle-mark2 emotion-105 emotion-106 emotion-107"
        />
      </span>
      <div
        class="emotion-110 emotion-111"
      >
        This is a notice
      </div>
    </div>
  </div>
</div>
`;
